Fix the jumping page issue when opening a comment dialog. This was caused by a few things. First, the CSS for setting the visibility should have been inline in the comment-dlg's style attribute, not in the CSS file. Our call to focus() was also happening during the animation, which also triggered this. We now load comments earlier and focus after the show.

--- a/trunk/htdocs/css/site.css
+++ b/trunk/htdocs/css/site.css
@@ -450,12 +450,6 @@ table.sidebyside .commentflag.draft {
   background: url('/images/comment-draft.png') no-repeat;
 }
 
-#comment-dlg {
-  position: absolute;
-  top: -10000px;
-  left: -10000px;
-}
-
 #comment-dlg #commentform .label {
   display: block;
   font-weight: bold;
